
603) When searching for the command, sudo now uses the effective gid
     of the runas user.

604) Sudo no longer updates the timestamp if not validated by sudoers.

605) Now rebuild environment regardless of how sudo was invoked.

606) More accurate usage() when called as sudoedit.

607) Command line environment variables are now treated like
     normal environment variables unless the SETENV tag is set.
     
608) Better explanation of environment handling in the sudo man page.

Sudo 1.6.9 released.

609) Worked around a bug ins some PAM implementations that caused a crash
     when no tty was present.

610) Fixed a crash on some platforms in the error logging function.

611) Documentation improvements.

Sudo 1.6.9p1 released.

612) Fixed updating of the saved environment when the environ pointer
     gets changed out from underneath us.

Sudo 1.6.9p2 released.

613) Fixed a bug related to supplemental group matching introduced
     in 1.6.9.

Sudo 1.6.9p3 released.

614) Added IPv6 support from YOSHIFUJI Hideaki.

615) Fixed sudo_noexec installation path.

616) Fixed a K&R compilation error.

Sudo 1.6.9p4 released.

617) Fixed a bug in the IP address matching introduced by the IPV6 merge.

618) For "visudo -f file" we now use the permissions of the original file
     and not the hard-coded sudoers owner/group/mode.  This makes
     it possible to use visudo with a revision control system.

619) Fixed sudoedit when used on a non-existent file.

620) Regenerated configure using autoconf 2.6.1 and libtool 1.5.24.

621) Groups and netgroups are now valid in an LDAP sudoRunas statement.

Sudo 1.6.9p5 released.

622) Worked around bugs in the session support of some PAM implementations.
     The full tty path is now passed to PAM as well.

623) Sudo now only prints the password prompt if the process is in the
     foreground.

624) inttypes.h is now included when appropriate if it is present.

625) Simplified alias allocation in the parser.